--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>
+    <p>Rose Pulsipher - WDD130</p>
 </body>
 </html>
