--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Riding Rough Waters Site Plan</h1>
+    <h1>Riding the Rough Waves Site Plan</h1>
     <h2>Rose Pulsipher</h2>
     <h2>WDD 130-A2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
