--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -55,9 +55,9 @@
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
         <td class="primary">#0A2463</td>
-        <td class="secondary">#7F95D1</td>
-        <td class="accent1">#89FBF7</td>
-        <td class="accent2">#266DD3</td>
+        <td class="secondary">#89FBF7</td>
+        <td class="accent1">#266DD3</td>
+        <td class="accent2">#7F95D1</td>
       </tr>
     </table>
 
