--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/rsz_website_logo.png" alt="Rough Waves Logo">
+                <img class="logo" src="images/Logo.png" alt="Rough Waves Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
