added to the site plan

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -109,10 +109,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Proper Romance <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Historical <!-- change this -->
         </div>
 
         <div class="top">
@@ -134,29 +134,163 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Have you ever enthusiastically started reading a book, just to find that the book itself wasn’t worth the effort? Maybe the plot was anti-climactic, the romance disappointing, or the end confusing. Whatever it was, don't worry! This site offers summaries of romance and historical books, so you never need to stress about reading a “bad” book. Not only is reading an enjoyable pastime, but extensive reading often leads to improvement in writing. Multiple writers over the years have said that good readers make good writers. So, whether you just want to enjoy a fun book, or are looking to find some books that will improve your writing skills, readingright<sup>&copy</sup> offers detailed summaries for you. 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Book.jpg" alt="Open Book">
+        <img src="images/Stack of Books.jpg" alt="Stack of Books">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Proper Romance</h3>
       <p>
-        [Written copy for the Page 2 here]
+        As everyone knows, romance books can be fun and insightful. However, they can also be depressing or offensive. With these in-depth summaries, you can decide whether you want to read that book or not, without even having to open the cover. 
+        <h1>Series</h1>
+          <h3>Dread Penny Society</h3>
+          <section>
+            	The Lady and the Highway Man 
+            	The Gentleman and the Thief
+            	he Merchant and the Rogue 
+            	The Bachelor and the Bride
+            	The Queen and the Knave
+          </section>
+          <h3>Savage Wells</h3>
+          <section>
+            	The Sheriffs of Savage Wells
+            	Healing Hearts
+            	Wyoming Wild
+          </section>
+          <h3>Hope Springs</h3>
+          <section>
+            	Longing For Home
+            	Longing For Home: Hope Springs
+            	Love Remains
+            	My Dearest Love
+            	Long Journey Home
+            	Valley of Dreams
+            	Choices of the Heart
+          </section>
+          <h3>Blue Orchid Society</h3>
+          <section>
+            	Solving Sophronia
+            	Inventing Vivian
+            	Healing Hazel
+            	Educating Elizabeth
+          </section>
+          <h3>Jonquil Brothers</h3>
+          <section>
+            	Kiss of a Stranger
+            	Friends and Foes
+            	Drops of Gold
+            	As You Are
+            	A Fine Gentleman
+            	For Love or Honor
+            	The Heart of the Vicar
+            	Charming Artemis 
+          </section>
+          <h3>Lancaster Family</h3>
+          <section>
+            	Seeking Persephone
+            	Courting Miss Lancaster
+            	Romancing Daphne
+            	Loving Lieutenant Lancaster
+            	Charming Artemis
+          </section>
+          <h3>War of 1812</h3>
+          <section>
+            	My Dearest Enemy
+            	The Shipbuilder’s Wife
+            	Charlotte’s Promise
+          </section>
+          <h3>Romance On the Orient Express</h3>
+          <section>
+            	It Started in Budapest
+            	Wrong Train to Paris
+            	Until Viena
+            	Song of Salzburg
+          </section>
+          <h3>Georgian Gentleman</h3>
+          <section>
+            	The Noble Smuggler
+            	An Uncommon Earl
+            	An Alleged Rogue
+            	An Unfamiliar Duke
+            	The Unassuming Curator
+          </section>
+        <h1>Stand Alone</h1>
+          	My Fair Gentleman
+          	The Matchmaker’s Lonely Heart
+          	A Captain for Caroline Gray
+          	Becoming Lady Lockwood
+          	Lady Emma’s Campaign 
+          	Miss Burton Unmasks a Prince
+          	Lies Jane Austen Told Me
+          	Lady Helen Finds Her Song
+          	Simply Anna
+          	Ashes on the Moor
+          	A Place for Miss Snow
+          	Lakeshire Park
+          	Georgana’s Secret
+          	Promised
+          	Edenbrooke
+          	Blackmoore
+          	For Elise
+          	An Unlikely Match
+          	Willowkeep
+          	To Marry an Earl
+
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Proper Romance Page</p>
+        <img src="images/Heart.jpg" alt="Heart in the Sand">
+        <img src="images/Couple.jpg" alt="Couple on Beach">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Historical</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The historical genre is often confused with historical fiction. However, there is a difference.  Historical fiction is a book that is written about historic events a great deal of time after that event. The historical genre is books that are written about historical events, but are written and published at the time surrounding that event. For example, the well-known classic, Little Women by Louisa May Alcott, would be historical, but not historical fiction because it was written and published around the time it is set in. Historical books are intriguing because, not only do they talk about historical incidents, but they talk about them from a first-hand perspective. These can be very informative. Check out the following summaries for a brush-up on your history. 
+	      <h1>1800’s</h1>
+          <h3>Jane Austen</h3>
+          <section>
+            	Emma
+            	Pride and Prejudice
+            	Sense and Sensibility 
+            	Persuasion
+            	Mansfield Park
+            	Northanger Abbey
+          </section>
+          <h3>Louisa May Alcott</h3>
+          <section>
+            	Little Women
+            	Little Men
+            	Eight Cousins
+            	Rose In Bloom
+            	An Old-Fashioned Girl
+            	North & South
+          </section>  
+        <h1>1900’s</h1>
+        <h3>Gene Stratton-Porter</h3>
+        <section>
+          	Freckles
+          	The Girl of the Limberlost
+          	Laddie
+        </section>
+        <h3>Lucy Maud Montgomery </h3>
+        <section>
+          	Anne of Green Gables
+          	Anne of Avonlea 
+          	Anne of the Island
+          	Anne of Windy Poplars
+          	Rilla of Ingleside
+          	Pat of Silver Bush
+          	Mistress Pat
+          	Emily of New Moon 
+          	Emily Climbs 
+          	Emily’s Quest
+          	The Blue Castle
+        </section>
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the Historical Fiction Page</p>
+        <img src="images/Historical image.jpg" alt="Old-Fashioned Car">
+        <img src="images/Soldiers.jpg" alt="Soldiers">
 
       </ul>
       <hr>
@@ -172,13 +306,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Romance</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Historical</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
