--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -147,9 +147,9 @@
         <h1>Series</h1>
           <h3>Dread Penny Society</h3>
           <section>
-            	The Lady and the Highway Man 
+             The Lady and the Highway Man
             	The Gentleman and the Thief
-            	he Merchant and the Rogue 
+            	The Merchant and the Rogue 
             	The Bachelor and the Bride
             	The Queen and the Knave
           </section>
