fixed site plan

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -97,8 +97,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Romance</a>
+        <a href="#">Historical</a>
       </nav>
       <hr>
       <h2>
@@ -109,7 +109,7 @@
           Home
         </div>
         <div class="sm-page2">
-          Proper Romance <!-- change this -->
+          Romance <!-- change this -->
         </div>
         <div class="sm-page3">
           Historical <!-- change this -->
@@ -241,7 +241,7 @@
       </p>
       <p>Images for the Proper Romance Page</p>
         <img src="images/Heart.jpg" alt="Heart in the Sand">
-        <img src="images/Couple.jpg" alt="Couple on Beach">
+        <img src="images/The Gentleman and the Theif.jpg" alt="Couple on Beach">
 
       </ul>
       <h3>Historical</h3>
@@ -290,7 +290,7 @@
       </p>
       <p>Images for the Historical Fiction Page</p>
         <img src="images/Historical image.jpg" alt="Old-Fashioned Car">
-        <img src="images/Soldiers.jpg" alt="Soldiers">
+        <img src="images/Emily's Quest.jpg" alt="Emily's Quest">
 
       </ul>
       <hr>
