--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -241,7 +241,7 @@
       </p>
       <p>Images for the Proper Romance Page</p>
         <img src="images/Heart.jpg" alt="Heart in the Sand">
-        <img src="images/The Gentleman and the Theif.jpg" alt="Couple on Beach">
+        <img src="images/The Gentleman and the Thief.jpg" alt="Couple on Beach">
 
       </ul>
       <h3>Historical</h3>
