--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -264,8 +264,9 @@
             	Eight Cousins
             	Rose In Bloom
             	An Old-Fashioned Girl
-            	North & South
-          </section>  
+          </section>   
+          <h3>Elizabeth Gaskell</h3> 
+          <section>	North & South</section>
         <h1>1900’s</h1>
         <h3>Gene Stratton-Porter</h3>
         <section>
