--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -120,9 +120,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>FAQs</h3>
+      <img src="images/Subpage Wireframe.png" alt="Subpage Wireframe">
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
 
