--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
         <a href="aboutme/index.html">About Me Page</a>
-        <a href="wwr/indew.html">White Water Rafting Website</a>
+        <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
+        <a href="positioning/positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="readingright/site-plan.html">Personal Siteplan</a>
     </nav>
     <p>Rose Pulsipher - WDD130</p>
 </body>
