--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,10 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>FAQs</h3>
+      <h4>Original</h4>
       <img src="images/Subpage Wireframe.png" alt="Subpage Wireframe">
+      <h4>Revised</h4>
+      <img src="images/Revised Wireframe.png" alt="Revised Subpage Wireframe">
 
   </main>
 </body>
