worked on rr site plan

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -302,22 +302,13 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homepage Wireframe.png" alt="Home Page Wireframe">
 
       <h3>Romance</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Romance Subpage Wireframe.png" alt="Romance Subpage Wireframe">
 
       <h3>Historical</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Historical Subpage Wireframe.png" alt="Historical Subpage Wireframe">
     </main>
 </body>
 
