--- a/wwr/faqs.html
+++ b/wwr/faqs.html
@@ -52,7 +52,7 @@
             <article id="conclu">
                 <h2>More Questions</h2>
                 <p>Have a question that's not here? Click the picture to contact us with your question at ridingrough65@gmail.com.</p>
-                <a href="#"><img src="images/Waves.jpg" alt="waves"></a> 
+                <a href="contactus.html"><img src="images/Waves.jpg" alt="waves"></a> 
             </article>
         </main>
         <footer>
