--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -25,11 +25,11 @@
                 <ul>
                     <li>
                       <label for="name">Name:</label>
-                      <input type="text" id="name" name="user_name" placeholder="Name"/>
+                      <input type="text" id="name" name="user_name" placeholder="Name">
                     </li>
                     <li>
                       <label for="mail">Email:</label>
-                      <input type="email" id="mail" name="user_email" placeholder="Email"/>
+                      <input type="email" id="mail" name="user_email" placeholder="Email">
                     </li>
                     <li>
                       <label for="msg">Question:</label>
