worked more on personal site

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -239,7 +239,7 @@
           	To Marry an Earl
 
       </p>
-      <p>Images for the Proper Romance Page</p>
+      <p>Images for the Romance Page</p>
         <img src="images/Heart.jpg" alt="Heart in the Sand">
         <img src="images/The Gentleman and the Thief.jpg" alt="Couple on Beach">
 
