changed siteplan picture

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -291,7 +291,7 @@
       </p>
       <p>Images for the Historical Fiction Page</p>
         <img src="images/Historical image.jpg" alt="Old-Fashioned Car">
-        <img src="images/Emily's Quest.jpg" alt="Emily's Quest">
+        <img src="images/Soldiers.jpg" alt="Soldiers">
 
       </ul>
       <hr>
