--- a/readingright/historical.html
+++ b/readingright/historical.html
@@ -20,63 +20,53 @@
    </header>
    <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/Airplane Background.jpg" alt="Airplane Background">
+            <img id="hero-img" src="images/Airplane-Background.jpg" alt="Airplane Background">
         </div>
    </div>
    <main>
-        <img src="images/Historical image.jpg" alt="Old Carriage">
+        <img src="images/Historical-Image.jpg" alt="Old Carriage">
         <h2>Hisorical</h2>
         <p>The historical genre is often confused with historical fiction. However, there is a difference.  Historical fiction is a book that is written about historic events a great deal of time after that event. The historical genre is books that are written about historical events, but are written and published at the time surrounding that event. For example, the well-known classic, Little Women by Louisa May Alcott, would be historical, but not historical fiction because it was written and published around the time it is set in. Historical books are intriguing because, not only do they talk about historical incidents, but they talk about them from a first-hand perspective. These can be very informative. Check out the following summaries for a brush-up on your history.</p>
         <h3>1800's</h3>
-            <section>
-                <h4>Jane Austen</h4>
-                <li><a href="#">Emma</li></a>
-                <li><a href="#">Pride and Prejudice</li></a>
-                <li><a href="#">Sense and Sensibility</li></a>
-                <li><a href="#">Persuasion</li></a>
-                <li><a href="#">Mansfield Park</li></a>
-                <li><a href="#">Northanger Abbey</li></a>
-            </section>
-            <section>
-                <h4>Louisa May Alcott</h4>
-                <li><a href="#">Little Women</li></a>
-                <li><a href="#">Little Men</li></a>
-                <li><a href="#">Eight Cousins</li></a>
-                <li><a href="#">Rose In Bloom</li></a>
-                <li><a href="#">An Old-Fashioned Girl</li></a>
-            </section>
-            <section>
-                <h4>Elizabeth Gaskell</h4>
-                <li><a href="#">North and South</li></a>
-            </section>
+            <h4>Jane Austen</h4>
+            <li><a href="#">Emma</li></a>
+            <li><a href="#">Pride and Prejudice</li></a>
+            <li><a href="#">Sense and Sensibility</li></a>
+            <li><a href="#">Persuasion</li></a>
+            <li><a href="#">Mansfield Park</li></a>
+            <li><a href="#">Northanger Abbey</li></a>
+            <h4>Louisa May Alcott</h4>
+            <li><a href="#">Little Women</li></a>
+            <li><a href="#">Little Men</li></a>
+            <li><a href="#">Eight Cousins</li></a>
+            <li><a href="#">Rose In Bloom</li></a>
+            <li><a href="#">An Old-Fashioned Girl</li></a>
+            <h4>Elizabeth Gaskell</h4>
+            <li><a href="#">North and South</li></a>
             <img src="images/Soldiers.jpg" alt="Soldiers">
         <h3>1900's</h3>
             <section>
-                <h4>Gene Stratton-Porter</h4>
-                <li><a href="#">Freckles</li></a>
-                <li><a href="#">The Girl of the Limberlost</li></a>
-                <li><a href="#">Laddie</li></a>
-            </section>
-            <section>
-                <h4>Lucy Maud Montgomery</h4>
-                <li><a href="#">Anne of Green Gables</li></a>
-                <li><a href="#">Anne of Avonlea</li></a> 
-                <li><a href="#">Anne of the Island</li></a>
-                <li><a href="#">Anne of Windy Poplars</li></a>
-                <li><a href="#">Rilla of Ingleside</li></a>
-                <li><a href="#">Pat of Silver Bush</li></a>
-                <li><a href="#">Mistress Pat</li></a>
-                <li><a href="#">Emily of New Moon</li></a>
-                <li><a href="#">Emily Climbs</li></a>
-                <li><a href="#">Emily’s Quest</li></a>
-                <li><a href="#">The Blue Castle</li></a>
-            </section>
+            <h4>Gene Stratton-Porter</h4>
+            <li><a href="#">Freckles</li></a>
+            <li><a href="#">The Girl of the Limberlost</li></a>
+            <li><a href="#">Laddie</li></a>
+            <h4>Lucy Maud Montgomery</h4>
+            <li><a href="#">Anne of Green Gables</li></a>
+            <li><a href="#">Anne of Avonlea</li></a> 
+            <li><a href="#">Anne of the Island</li></a>
+            <li><a href="#">Anne of Windy Poplars</li></a>
+            <li><a href="#">Rilla of Ingleside</li></a>
+            <li><a href="#">Pat of Silver Bush</li></a>
+            <li><a href="#">Mistress Pat</li></a>
+            <li><a href="#">Emily of New Moon</li></a>
+            <li><a href="#">Emily Climbs</li></a>
+            <li><a href="#">Emily’s Quest</li></a>
+            <li><a href="#">The Blue Castle</li></a>
    </main>
    <footer>
        <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
        <p><a href="site-plan.html">Site Plan</a></p>
        <p><a href="contactme.html">Contact Me</a></p>
-       </div>
    </footer>
 </body>
 </html>
