--- a/readingright/index.html
+++ b/readingright/index.html
@@ -21,7 +21,7 @@
         </header>  
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/Background Book.jpg" alt="Book Background">
+                <img id="hero-img" src="images/Background-Book.jpg" alt="Book Background">
             </div>
                 <section id="hero-msg">
                     <h1 class="home-title">Read the Right Way</h1>
@@ -32,21 +32,20 @@
             <section>
                 <h2>Romance</h2>
                 <p>Have you ever enthusiastically started reading a book, just to find that the book itself wasn’t worth the effort? Maybe the plot was anti-climactic, the romance disappointing, or the end confusing. Whatever it was, don't worry! This site offers summaries of romance and historical books, so you never need to stress about reading a “bad” book.</p>
-                <a href="romance.html"><button>Romance</button></a>
+                <button><a href="romance.html">Romance</a></button>
                 <img src="images/Book.jpg" alt="An Open Book">
             </section>
             <section>
                 <h2>Historical</h2>
                 <p>Not only is reading an enjoyable pastime, but extensive reading often leads to improvement in writing. Multiple writers over the years have said that good readers make good writers. So, whether you just want to enjoy a fun book, or are looking to find some books that will improve your writing skills, readingright<sup>&copy</sup> offers detailed summaries for you.</p>
-                <a href="historical.html"><button>Historical</button></a>
-                <img src="images/Stack of Books.jpg" alt="Stack of Books">
+                <button><a href="historical.html">Historical</a></button>
+                <img src="images/Stack-of-Books.jpg" alt="Stack of Books">
             </section>
         </main>
         <footer>
             <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactme.html">Contact Me</a></p>
-            </div>
         </footer>
     </div>
 </body>
