Fixed Siteplan Images

--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -241,7 +241,7 @@
       </p>
       <p>Images for the Romance Page</p>
         <img src="images/Heart.jpg" alt="Heart in the Sand">
-        <img src="images/The Gentleman and the Thief.jpg" alt="Couple on Beach">
+        <img src="images/The-Gentleman-and-the-Thief.jpg" alt="The Gentleman and the Thief Cover">
 
       </ul>
       <h3>Historical</h3>
@@ -290,7 +290,7 @@
         </section>
       </p>
       <p>Images for the Historical Fiction Page</p>
-        <img src="images/Historical image.jpg" alt="Old-Fashioned Car">
+        <img src="images/Historical-Image.jpg" alt="Old-Fashioned Car">
         <img src="images/Soldiers.jpg" alt="Soldiers">
 
       </ul>
@@ -302,13 +302,13 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <img src="images/Homepage Wireframe.png" alt="Home Page Wireframe">
+      <img src="images/Homepage-Wireframe.png" alt="Home Page Wireframe">
 
       <h3>Romance</h3>
-      <img src="images/Romance Subpage Wireframe.png" alt="Romance Subpage Wireframe">
+      <img src="images/Romance-Subpage-Wireframe.png" alt="Romance Subpage Wireframe">
 
       <h3>Historical</h3>
-      <img src="images/Historical Subpage Wireframe.png" alt="Historical Subpage Wireframe">
+      <img src="images/Historical-Subpage-Wireframe.png" alt="Historical Subpage Wireframe">
     </main>
 </body>
 
