--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -138,7 +138,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="images/Book.jpg" alt="Open Book">
-        <img src="images/Stack of Books.jpg" alt="Stack of Books">
+        <img src="images/Stack-of-Books.jpg" alt="Stack of Books">
 
       </ul>
       <h3>Proper Romance</h3>
