adjusted home page

--- a/readingright/index.html
+++ b/readingright/index.html
@@ -21,7 +21,7 @@
         </header>  
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/rsz_background-book.jpg" alt="Book Background">
+                <img id="hero-img" src="images/background-book.jpg" alt="Book Background">
             </div>
                 <section id="hero-msg">
                     <h1 class="home-title">Read the Right Way</h1>
@@ -32,13 +32,13 @@
             <section id="rbox">
                 <h2>Romance</h2>
                 <p>Have you ever enthusiastically started reading a book, just to find that the book itself wasn’t worth the effort? Maybe the plot was anti-climactic, the romance disappointing, or the end confusing. Whatever it was, don't worry! This site offers summaries of romance and historical books, so you never need to stress about reading a “bad” book.</p>
-                <button><a href="romance.html">Romance</a></button>
+                <a class="button" href="romance.html">Romance</a>
                 <img src="images/Book.jpg" alt="An Open Book">
             </section>
             <section id="hbox">
                 <h2>Historical</h2>
-                <p>Not only is reading an enjoyable pastime, but extensive reading often leads to improvement in writing. Multiple writers over the years have said that good readers make good writers. So, whether you just want to enjoy a fun book, or are looking to find some books that will improve your writing skills, readingright<sup>&copy</sup> offers detailed summaries for you.</p>
-                <button><a href="historical.html">Historical</a></button>
+                <p>Not only is reading an enjoyable pastime, but extensive reading often leads to improvement in writing. Multiple writers over the years have said that good readers make good writers. So, whether you just want to enjoy a fun book, or are looking to find some books that will improve your writing skills, readingright<sup>&copy;</sup> offers detailed summaries for you.</p>
+                <a class="button" href="historical.html">Historical</a>
                 <img src="images/Paper.jpg" alt="Paper">
             </section>
         </main>
