worked on pictures

--- a/readingright/index.html
+++ b/readingright/index.html
@@ -21,7 +21,7 @@
         </header>  
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/background-book.jpg" alt="Book Background">
+                <img id="hero-img" src="images/Background-Book.jpg" alt="Book Background">
             </div>
                 <section id="hero-msg">
                     <h1 class="home-title">Read the Right Way</h1>
