--- a/readingright/romance.html
+++ b/readingright/romance.html
@@ -6,7 +6,7 @@
     <title>Romance Summaries</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="rpage">
     <header>
          <a id="logo_link" href="index.html">
             <img class="logo" src="images/Book-Logo.png" alt="Reading Right Logo">
@@ -22,23 +22,33 @@
         <div id="hero-box">
             <img id="hero-img" src="images/Heart-Background.jpg" alt="Heart Background">
         </div>
+        <section id="hero-msg">
+            <h1 class="rtitle">ROMANCE</h1>
+        </section>
     </div>
-    <main>
-        <img src="images/The-Gentleman-and-the-Thief.jpg" alt="Book Cover">
-        <h2>Romance</h2>
-        <p>As everyone knows, romance books can be fun and insightful. However, they can also be depressing or offensive. With these in-depth summaries, you can decide whether you want to read that book or not, without even having to open the cover.</p>
-        <h3>Series</h3>
-            <h4>Dread Penny Series</h4>
-            <li><a href="#">The Lady and the Highway Man</a></li>
-            <li><a href="#">The Gentleman and the Thief</a></li>
+    <main> 
+        <section id="intro">
+            <h2>Romance</h2>
+            <p>As everyone knows, romance books can be fun and insightful. However, they can also be depressing or offensive. With these in-depth summaries, you can decide whether you want to read that book or not, without even having to open the cover.</p>
+            <img src="images/The-Gentleman-and-the-Thief.jpg" alt="Book Cover">
+        </section>
+            <h3>SERIES</h3>
+            <h4>Dread Penny</h4>
+            <ul id="first">
+            <li><a href="theladyandthehighwayman.html">The Lady and the Highway Man</a></li>
+            <li><a href="thegentlemanandthethief.html">The Gentleman and the Thief</a></li>
             <li><a href="#">The Merchant and the Rogue</a></li>
             <li><a href="#">The Bachelor and the Bride</a></li>
             <li><a href="#">The Queen and the Knave</a></li>
+            </ul>
             <h4>Savage Wells</h4>
+            <ul>
             <li><a href="#">The Sheriffs of Savage Wells</a></li>
             <li><a href="#">Healing Hearts</a></li>
             <li><a href="#">Wyoming Wild</a></li>
+            </ul>
             <h4>Hope Springs</h4>
+            <ul>
             <li><a href="#">Longing For Home</a></li>
             <li><a href="#">Longing For Home: Hope Springs</a></li>
             <li><a href="#">Love Remains</a></li>
@@ -46,12 +56,16 @@
             <li><a href="#">Long Journey Home</a></li>
             <li><a href="#">Valley of Dreams</a></li>
             <li><a href="#">Choices of the Heart</a></li>
+            </ul>
             <h4>Blue Orchid Society</h4>
+            <ul>  
             <li><a href="#">Solving Sophronia</a></li>
             <li><a href="#">Inventing Vivian</a></li>
             <li><a href="#">Healing Hazel</a></li>
             <li><a href="#">Educating Elizabeth</a></li>
-            <h4>Jonquil Brothers</h4>
+            </ul>
+            <h4>Jonquill Brothers</h4>
+            <ul>
             <li><a href="#">Kiss of a Stranger</a></li>
             <li><a href="#">Friends and Foes</a></li>
             <li><a href="#">Drops of Gold</a></li>
@@ -60,59 +74,87 @@
             <li><a href="#">For Love or Honor</a></li>
             <li><a href="#">The Heart of the Vicar</a></li>
             <li><a href="#">Charming Artemis</a></li>
+            </ul>   
             <h4>Lancaster Family</h4>
+            <ul>
             <li><a href="#">Seeking Persephone</a></li>
             <li><a href="#">Courting Miss Lancaster</a></li>
             <li><a href="#">Romancing Daphne</a></li>
             <li><a href="#">Loving Lieutenant Lancaster</a></li>
             <li><a href="#">Charming Artemis</a></li>
+            </ul>
             <h4>War of 1812</h4>
+            <ul>
             <li><a href="#">My Dearest Enemy</a></li>
             <li><a href="#">The Shipbuilder’s Wife</a></li>
             <li><a href="#">Charlotte’s Promise</a></li>
+            </ul>
             <h4>Romance on the Orient Express</h4>
+            <ul>
             <li><a href="#">It Started in Budapest</a></li>
             <li><a href="#">Wrong Train to Paris</a></li>
             <li><a href="#">Until Viena</a></li>
             <li><a href="#">Song of Salzburg</a></li>
+            </ul>
             <h4>Georgian Gentleman</h4>
+            <ul>
             <li><a href="#">The Noble Smuggler</a></li>
             <li><a href="#">An Uncommon Earl</a></li>
             <li><a href="#">An Alleged Rogue</a></li>
             <li><a href="#">An Unfamiliar Duke</a></li>
             <li><a href="#">The Unassuming Curator</a></li>
-            <img src="images/Couple.jpg" alt="couple">
-        <h3>Stand Alone (By Author)</h3>
+            </ul>
+            <h3>STAND ALONE (BY AUTHOR)</h3>
             <h4>Sarah M Eden</h4>
+            <ul>
             <li><a href="#">Ashes on the Moor</a></li>
             <li><a href="#">For Elise</a></li>
             <li><a href="#">An Unlikely Match</a></li>
+            </ul>
             <h4>Jennifer Moore</h4>
+            <ul>
             <li><a href="#">Becoming Lady Lockwood</a></li>
             <li><a href="#">Lady Emma's Campaign</a></li>
             <li><a href="#">Simply Anna</a></li>
             <li><a href="#">Miss Burton Unmasks a Prince</a></li>
             <li><a href="#">Lady Helen Finds her Song</a></li>
             <li><a href="#">A Place for Miss Snow</a></li>
+            </ul>   
             <h4>Julie Daines</h4>
+            <ul>
             <li><a href="#">Willowkeep</a></li>
+            </ul>
             <h4>Julie Wright</h4>
+            <ul>
             <li><a href="#">A Captain for Caroline Gray</a></li>
             <li><a href="#">Lies Jane Austen Told Me</a></li>
+            </ul>
             <h4>Julianne Donaldson</h4>
+            <ul>   
             <li><a href="#">Edenbrooke</a></li>
             <li><a href="#">Blackmoore</a></li>
+            </ul>
             <h4>Arlem Hawks</h4>
+            <ul>
             <li><a href="#">Georgana’s Secret</a></li>
+            </ul>
             <h4>Leah Garriott</h4>
+            <ul>
             <li><a href="#">Promised</a></li>
+            </ul>
             <h4>Nancy Campbell Allen</h4>
+            <ul>
             <li><a href="#">My Fair Gentleman</a></li>
             <li><a href="#">The Matchmaker’s Lonely Heart</a></li>
+            </ul>
             <h4>Megan Walker</h4>
+            <ul>
             <li><a href="#">Lakeshire Park</a></li>
+            </ul>
             <h4>Karen Thornell</h4>
-            <li><a href="#">To Marry an Earl</a></li>      
+            <ul>
+            <li><a href="#">To Marry an Earl</a></li> 
+            </ul>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
