worked on hist subpage

--- a/readingright/historical.html
+++ b/readingright/historical.html
@@ -6,7 +6,7 @@
     <title>Hisorical Summaries</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="hpage">
     <header>
         <a id="logo_link" href="index.html">
            <img class="logo" src="images/Book-Logo.png" alt="Reading Right Logo">
@@ -33,28 +33,33 @@
         </section>
         <h3>1800's</h3>
             <h4>Jane Austen</h4>
-            <li><a href="#">Emma</li></a>
-            <li><a href="#">Pride and Prejudice</li></a>
-            <li><a href="#">Sense and Sensibility</li></a>
-            <li><a href="#">Persuasion</li></a>
-            <li><a href="#">Mansfield Park</li></a>
-            <li><a href="#">Northanger Abbey</li></a>
+            <ul id="first">
+            <li><a href="emma.html">Emma</li></a>
+            <li><a href="prideandprejudice.html">Pride and Prejudice</li></a>
+            <li><a href="persuasion.html">Persuasion</li></a>
+            <li><a href="northangerabbey.html">Northanger Abbey</li></a>
+            </ul>
             <h4>Louisa May Alcott</h4>
+            <ul>
             <li><a href="#">Little Women</li></a>
             <li><a href="#">Little Men</li></a>
             <li><a href="#">Eight Cousins</li></a>
             <li><a href="#">Rose In Bloom</li></a>
             <li><a href="#">An Old-Fashioned Girl</li></a>
+            </ul>
             <h4>Elizabeth Gaskell</h4>
+            <ul>
             <li><a href="#">North and South</li></a>
-            <img src="images/Soldiers.jpg" alt="Soldiers">
+            </ul>
         <h3>1900's</h3>
-            <section>
             <h4>Gene Stratton-Porter</h4>
+            <ul>
             <li><a href="#">Freckles</li></a>
             <li><a href="#">The Girl of the Limberlost</li></a>
             <li><a href="#">Laddie</li></a>
+            </ul>
             <h4>Lucy Maud Montgomery</h4>
+            <ul>
             <li><a href="#">Anne of Green Gables</li></a>
             <li><a href="#">Anne of Avonlea</li></a> 
             <li><a href="#">Anne of the Island</li></a>
@@ -66,6 +71,7 @@
             <li><a href="#">Emily Climbs</li></a>
             <li><a href="#">Emily’s Quest</li></a>
             <li><a href="#">The Blue Castle</li></a>
+            </ul>
    </main>
    <footer>
        <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
