--- a/readingright/historical.html
+++ b/readingright/historical.html
@@ -28,49 +28,50 @@
    </div>
    <main>
         <section id="intro">
+        <h2>Historical</h2>
         <p>The historical genre is often confused with historical fiction. However, there is a difference.  Historical fiction is a book that is written about historic events a great deal of time after that event. The historical genre is books that are written about historical events, but are written and published at the time surrounding that event. For example, the well-known classic, Little Women by Louisa May Alcott, would be historical, but not historical fiction because it was written and published around the time it is set in. Historical books are intriguing because, not only do they talk about historical incidents, but they talk about them from a first-hand perspective. These can be very informative. Check out the following summaries for a brush-up on your history.</p> 
         <img src="images/Historical-Image.jpg" alt="Old Carriage">
         </section>
         <h3>1800's</h3>
             <h4>Jane Austen</h4>
             <ul id="first">
-            <li><a href="emma.html">Emma</li></a>
-            <li><a href="prideandprejudice.html">Pride and Prejudice</li></a>
-            <li><a href="persuasion.html">Persuasion</li></a>
-            <li><a href="northangerabbey.html">Northanger Abbey</li></a>
+            <li><a href="emma.html">Emma</a></li>
+            <li><a href="prideandprejudice.html">Pride and Prejudice</a></li>
+            <li><a href="persuasion.html">Persuasion</a></li>
+            <li><a href="northangerabbey.html">Northanger Abbey</a></li>
             </ul>
             <h4>Louisa May Alcott</h4>
             <ul>
-            <li><a href="#">Little Women</li></a>
-            <li><a href="#">Little Men</li></a>
-            <li><a href="#">Eight Cousins</li></a>
-            <li><a href="#">Rose In Bloom</li></a>
-            <li><a href="#">An Old-Fashioned Girl</li></a>
+            <li><a href="#">Little Women</a></li>
+            <li><a href="#">Little Men</a></li>
+            <li><a href="#">Eight Cousins</a></li>
+            <li><a href="#">Rose In Bloom</a></li>
+            <li><a href="#">An Old-Fashioned Girl</a></li>
             </ul>
             <h4>Elizabeth Gaskell</h4>
             <ul>
-            <li><a href="#">North and South</li></a>
+            <li><a href="#">North and South</a></li>
             </ul>
         <h3>1900's</h3>
             <h4>Gene Stratton-Porter</h4>
             <ul>
-            <li><a href="#">Freckles</li></a>
-            <li><a href="#">The Girl of the Limberlost</li></a>
-            <li><a href="#">Laddie</li></a>
+            <li><a href="#">Freckles</a></li>
+            <li><a href="#">The Girl of the Limberlost</a></li>
+            <li><a href="#">Laddie</a></li>
             </ul>
             <h4>Lucy Maud Montgomery</h4>
             <ul>
-            <li><a href="#">Anne of Green Gables</li></a>
-            <li><a href="#">Anne of Avonlea</li></a> 
-            <li><a href="#">Anne of the Island</li></a>
-            <li><a href="#">Anne of Windy Poplars</li></a>
-            <li><a href="#">Rilla of Ingleside</li></a>
-            <li><a href="#">Pat of Silver Bush</li></a>
-            <li><a href="#">Mistress Pat</li></a>
-            <li><a href="#">Emily of New Moon</li></a>
-            <li><a href="#">Emily Climbs</li></a>
-            <li><a href="#">Emily’s Quest</li></a>
-            <li><a href="#">The Blue Castle</li></a>
+            <li><a href="#">Anne of Green Gables</a></li>
+            <li><a href="#">Anne of Avonlea</a></li>
+            <li><a href="#">Anne of the Island</a></li>
+            <li><a href="#">Anne of Windy Poplars</a></li>
+            <li><a href="#">Rilla of Ingleside</a></li>
+            <li><a href="#">Pat of Silver Bush</a></li>
+            <li><a href="#">Mistress Pat</a></li>
+            <li><a href="#">Emily of New Moon</a></li>
+            <li><a href="#">Emily Climbs</a></li>
+            <li><a href="#">Emily’s Quest</a></li>
+            <li><a href="#">The Blue Castle</a></li>
             </ul>
    </main>
    <footer>
