--- a/readingright/emma.html
+++ b/readingright/emma.html
@@ -19,7 +19,7 @@
         </nav> 
     </header>
     <main>
-        <a class="previous1">&laquo; Previous Summary</a>
+        <a id="void">&laquo; Previous Summary</a>
         <a href="prideandprejudice.html" id="next">Next Summary &raquo;</a> 
         <h2>Emma</h2> 
         <p>[Summary]</p>
