--- a/readingright/historical.html
+++ b/readingright/historical.html
@@ -42,36 +42,36 @@
             </ul>
             <h4>Louisa May Alcott</h4>
             <ul>
-            <li><a href="#">Little Women</a></li>
-            <li><a href="#">Little Men</a></li>
-            <li><a href="#">Eight Cousins</a></li>
-            <li><a href="#">Rose In Bloom</a></li>
-            <li><a href="#">An Old-Fashioned Girl</a></li>
+            <li><a href="littlewomen.html">Little Women</a></li>
+            <li><a href="littlemen.html">Little Men</a></li>
+            <li><a href="eightcousins.html">Eight Cousins</a></li>
+            <li><a href="roseinbloom.html">Rose In Bloom</a></li>
+            <li><a href="anoldfashionedgirl.html">An Old-Fashioned Girl</a></li>
             </ul>
             <h4>Elizabeth Gaskell</h4>
             <ul>
-            <li><a href="#">North and South</a></li>
+            <li><a href="northandsouth.html">North and South</a></li>
             </ul>
         <h3>1900's</h3>
             <h4>Gene Stratton-Porter</h4>
             <ul>
-            <li><a href="#">Freckles</a></li>
-            <li><a href="#">The Girl of the Limberlost</a></li>
-            <li><a href="#">Laddie</a></li>
+            <li><a href="freckles.html">Freckles</a></li>
+            <li><a href="thegirlofthelimberlost.html">The Girl of the Limberlost</a></li>
+            <li><a href="laddie.html">Laddie</a></li>
             </ul>
             <h4>Lucy Maud Montgomery</h4>
             <ul>
-            <li><a href="#">Anne of Green Gables</a></li>
-            <li><a href="#">Anne of Avonlea</a></li>
-            <li><a href="#">Anne of the Island</a></li>
-            <li><a href="#">Anne of Windy Poplars</a></li>
-            <li><a href="#">Rilla of Ingleside</a></li>
-            <li><a href="#">Pat of Silver Bush</a></li>
-            <li><a href="#">Mistress Pat</a></li>
-            <li><a href="#">Emily of New Moon</a></li>
-            <li><a href="#">Emily Climbs</a></li>
-            <li><a href="#">Emily’s Quest</a></li>
-            <li><a href="#">The Blue Castle</a></li>
+            <li><a href="anneofgreengables.html">Anne of Green Gables</a></li>
+            <li><a href="anneofavonlea.html">Anne of Avonlea</a></li>
+            <li><a href="anneoftheisland.html">Anne of the Island</a></li>
+            <li><a href="anneofwindypoplars.html">Anne of Windy Poplars</a></li>
+            <li><a href="rillaofingleside.html">Rilla of Ingleside</a></li>
+            <li><a href="patofsilverbush.html">Pat of Silver Bush</a></li>
+            <li><a href="mistresspat.html">Mistress Pat</a></li>
+            <li><a href="emilyofnewmoon.html">Emily of New Moon</a></li>
+            <li><a href="emilyclimbs.html">Emily Climbs</a></li>
+            <li><a href="emily'squest.html">Emily’s Quest</a></li>
+            <li><a href="thebluecastle.html">The Blue Castle</a></li>
             </ul>
    </main>
    <footer>
