--- a/readingright/rillaofingleside.html
+++ b/readingright/rillaofingleside.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Northanger Abbey</title>
+<title>Rilla of Ingleside</title>
 <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,9 +18,9 @@
     </nav> 
     </header>
     <main>
-        <a href="persuasion.html" id="previous">&laquo; Previous Summary</a>
-        <a href="littlewomen.html" id="next">Next Summary &raquo;</a>
-        <h2>Northanger Abbey</h2>
+        <a href="anneofwindypoplars.html" id="previous">&laquo; Previous Summary</a>
+        <a href="patofsilverbush.html" id="next">Next Summary &raquo;</a>
+        <h2>Rilla of Ingleside</h2>
         <p>[Summary]</p>  
     </main>
     <footer>
